// This file describes intermidiate representatation used by runtime
syntax = "proto3";

package ir;

option go_package = "pkg/ir";

message Program {
  repeated PortInfo ports = 1;
  repeated Connection connections = 2;
  repeated Func funcs = 3;
}

message PortInfo {
  PortAddr port_addr = 1;
  uint32 buf_size = 2; // proto doesn't support uint8
}

message PortAddr {
  string path = 1;
  string port = 2;
  uint32 idx = 3; // proto doesn't support uint8
}

message Connection {
  PortAddr sender_side = 1;
  repeated ReceiverConnectionSide receiver_sides = 2;
}

message ReceiverConnectionSide {
  PortAddr port_addr = 1;
}

message Func {
  string ref = 1;
  FuncIO io = 2;
  Msg params = 3;
}

message FuncIO {
  repeated PortAddr inports = 1;
  repeated PortAddr outports = 2;
}

message Msg {
  MsgType type = 1;
  bool bool = 2;
  int64 int = 3;
  double float = 4;
  string str = 5;
}

enum MsgType {
  MSG_TYPE_UNSPECIFIED = 0;
  MSG_TYPE_BOOL = 1;
  MSG_TYPE_INT = 2;
  MSG_TYPE_FLOAT = 3;
  MSG_TYPE_STR = 4;
}
